--- a/src/views/promotion/promotion1.ejs
+++ b/src/views/promotion/promotion1.ejs
@@ -417,6 +417,28 @@
             document.execCommand("copy");
             $temp.remove();
         }
+
+        $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
+          
     </script>
 </body>
 
