--- a/src/views/promotion/myTeam.ejs
+++ b/src/views/promotion/myTeam.ejs
@@ -166,7 +166,7 @@
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title"> My Team</div>
+                <div data-v-106b99c8="" class="navbar-title" data-lang="teamSheets"> My Team</div>
                 <div data-v-106b99c8="" class="navbar-right" onclick="location.href='/promotion/bonusrecord'">
                     <div data-v-7c8bbbf4="" data-v-106b99c8="" class="c-row">
                         <i class="fa-duotone fa-calendar-lines fa-fade fa-lg"
@@ -177,11 +177,11 @@
             <div data-v-0ff6946a="" class="promotion">
                 <div data-v-0ff6946a="" class="tab">
                     <ul data-v-0ff6946a="" class="c-row c-row-between">
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion'">Data</li>
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/myTeam'" class="action block-click">My
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion'" data-lang="announcement">Data</li>
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/myTeam'" class="action block-click" data-lang="teamSheets">My
                             Team</li>
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'">History</li>
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/tutorial'">Tutorial</li>
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'" data-lang="record">History</li>
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/tutorial'" data-lang="titleInvitationRule">Tutorial</li>
                     </ul>
                 </div>
                 <div data-v-0ff6946a="" class="box">
@@ -195,13 +195,13 @@
 
                         <div data-v-0ff6946a="" class="select-wrapper">
                             <select id="levelSelect" class="c-tc">
-                                <option value="">All Levels</option>
-                                <option value="1">Level 1</option>
-                                <option value="2">Level 2</option>
-                                <option value="3">Level 3</option>
-                                <option value="4">Level 4</option>
-                                <option value="5">Level 5</option>
-                                <option value="6">Level 6</option>
+                                <option value="" data-lang="selectLevel">All Levels</option>
+                                <option value="1" data-lang="teamReportLeval1">Level 1</option>
+                                <option value="2" data-lang="teamReportLeval2">Level 2</option>
+                                <option value="3" data-lang="teamReportLeval3">Level 3</option>
+                                <option value="4" data-lang="teamReportLeval4">Level 4</option>
+                                <option value="5" data-lang="teamReportLeval5">Level 5</option>
+                                <option value="6" data-lang="teamReportLeval6">Level 6</option>
                             </select>
                         </div>
 
@@ -215,11 +215,11 @@
                         
                         <div data-v-0ff6946a="" class="hd van-row">
                             <div data-v-0ff6946a="" class="c-tc van-col van-col--4">UID</div>
-                            <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--5">Name</div>
-                            <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--6">Turnover</div>
+                            <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--5" data-lang="binguoMin">Name</div>
+                            <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--6" data-lang="turnover">Turnover</div>
                             <!-- <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--4">Status</div> -->
-                            <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--4">Level</div>
-                            <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--4">Details</div>
+                            <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--4" data-lang="level">Level</div>
+                            <div data-v-0ff6946a="" class="c-tc van-ellipsis van-col van-col--4" data-lang="detail">Details</div>
                         </div>
                         <div data-v-0ff6946a="" class="list">
                             <div data-v-0ff6946a="" role="feed" class="van-list">
@@ -302,14 +302,14 @@
                                 </div> -->
                                 <div data-v-0ff6946a="" class="c-tc red van-col van-col--4">${data.user_level}</div>
                                 <div data-v-0ff6946a="" class="c-tc van-col van-col--4">
-                                    <span data-v-0ff6946a="" class="details-button">Details</span>
+                                    <span data-v-0ff6946a="" class="details-button" data-lang="detail">Details</span>
                                     <span data-v-0ff6946a="" class="details-arrow" style="display: none;">▼</span>
                                 </div>
                             </div>
                             <div data-v-0ff6946a="" class="bdshow" style="display: none;">
                                 <div data-v-0ff6946a="" class="c-row c-row-between">
                                     <div data-v-0ff6946a="">Today TTO: ${data.daily_turn_over}</div>
-                                    <div data-v-0ff6946a="">Self RC:${data.total_money}</div>
+                                    <div data-v-0ff6946a=""> Self RC:${data.total_money}</div>
                                 </div>
                                <div data-v-0ff6946a="">REG time: ${timerJoin(data.time)}</div>
                                <div data-v-0ff6946a="" id="subordinateList">Subordinate: ${data.invite_count}</div>
@@ -386,17 +386,17 @@
                                             </div> -->
                                             <div data-v-0ff6946a="" class="c-tc red van-col van-col--4">${data.user_level}</div>
                                             <div data-v-0ff6946a="" class="c-tc van-col van-col--4">
-                                                <span data-v-0ff6946a="" class="details-button">Details</span>
+                                                <span data-v-0ff6946a="" class="details-button" data-lang="detail">Details</span>
                                                 <span data-v-0ff6946a="" class="details-arrow" style="display: none;">▼</span>
                                             </div>
                                         </div>
                                         <div data-v-0ff6946a="" class="bdshow" style="display: none;">
                                             <div data-v-0ff6946a="" class="c-row c-row-between">
-                                                <div data-v-0ff6946a="">Today TO: ${data.daily_turn_over}</div>
-                                                <div data-v-0ff6946a="">Self RC: ${data.total_money}</div>
+                                                <div data-v-0ff6946a=""><span data-lang="typingAmount">Today TO:</span> ${data.daily_turn_over}</div>
+                                                <div data-v-0ff6946a=""><span data-lang="recharge">Self RC:</span> ${data.total_money}</div>
                                             </div>
                                            
-                <div data-v-0ff6946a="" id="subordinateList">Subordinate: ${data.invite_count}</div>
+                <div data-v-0ff6946a="" id="subordinateList" > <span data-lang="subordinatesNumber">Subordinate:</span> ${data.invite_count}</div>
                                         </div>
                                  </div>
                     `;
@@ -426,6 +426,27 @@
                     filterData(partialUID, selectedLevel);
                 });
                 filterData("", "");
+               
+                $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
 
             </script>
 
