--- a/src/views/promotion/tutorial.ejs
+++ b/src/views/promotion/tutorial.ejs
@@ -171,7 +171,7 @@
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title"> Tutorial </div>
+                <div data-v-106b99c8="" class="navbar-title" data-lang="titleInvitationRule"> Tutorial </div>
                 <div data-v-106b99c8="" class="navbar-right" onclick="location.href='/promotion/bonusrecord'">
                     <div data-v-7c8bbbf4="" data-v-106b99c8="" class="c-row">
                         <i class="fa-duotone fa-calendar-lines fa-fade fa-lg"
@@ -182,16 +182,16 @@
             <div data-v-7c8bbbf4="" class="promotion promotion-mian">
                 <div data-v-7c8bbbf4="" class="tab">
                     <ul data-v-7c8bbbf4="" class="c-row c-row-between">
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion'">Data</li>
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/myTeam'">My Team</li>
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'">History</li>
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/tutorial'" class="action block-click">
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion'" data-lang="announcement">Data</li>
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/myTeam'" data-lang="teamSheets">My Team</li>
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'" data-lang="record">History</li>
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/tutorial'" class="action block-click" data-lang="titleInvitationRule">
                             Tutorial</li>
                     </ul>
                 </div>
                 <div data-v-caf13393="" class="promotion-mian__title">
-                    <h1 data-v-caf13393="">【Promotion partner】program</h1>
-                    <p data-v-caf13393="">This activity is valid for a long time</p>
+                    <h1 data-v-caf13393="" data-lang="tipPromotionPartner">【Promotion partner】program</h1>
+                    <p data-v-caf13393="" data-lang="tipActivityValidForLongTime">This activity is valid for a long time</p>
                 </div>
 
                 <div data-v-caf13393="" class="promotion-box">
@@ -201,7 +201,7 @@
                     <div data-v-caf13393="" class="promotion-title">01</div>
                     <div data-v-caf13393="" class="promotion-box__titleRight"></div>
                     <div data-v-caf13393="" class="promotion-txt">
-                        <p data-v-caf13393="">There are 6 subordinate levels in inviting friends, if A invites B, then B
+                        <p data-v-caf13393="" data-lang="promotionRuleDesc1">There are 6 subordinate levels in inviting friends, if A invites B, then B
                             is a level 1 subordinate of A. If B invites C, then C is a level 1 subordinate of B and also
                             a level 2 subordinate of A. If C invites D, then D is a level 1 subordinate of C, at the
                             same time a level 2 subordinate of B and also a level 3 subordinate of A.</p>
@@ -214,7 +214,7 @@
                     <div data-v-caf13393="" class="promotion-title">02</div>
                     <div data-v-caf13393="" class="promotion-box__titleRight"></div>
                     <div data-v-caf13393="" class="promotion-txt">
-                        <p data-v-caf13393="">When inviting friends to register, you must send the invitation link
+                        <p data-v-caf13393="" data-lang="promotionRuleDesc2">When inviting friends to register, you must send the invitation link
                             provided or enter the invitation code manually so that your friends become your level 1
                             subordinates.</p>
                     </div>
@@ -226,7 +226,7 @@
                     <div data-v-caf13393="" class="promotion-title">03</div>
                     <div data-v-caf13393="" class="promotion-box__titleRight"></div>
                     <div data-v-caf13393="" class="promotion-txt">
-                        <p data-v-caf13393="">The invitee registers via the inviter's invitation code and completes the
+                        <p data-v-caf13393="" data-lang="promotionRuleDesc3">The invitee registers via the inviter's invitation code and completes the
                             deposit, shortly after that the commission will be received immediately</p>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                     <div data-v-caf13393="" class="promotion-title">04</div>
                     <div data-v-caf13393="" class="promotion-box__titleRight"></div>
                     <div data-v-caf13393="" class="promotion-txt">
-                        <p data-v-caf13393="">The calculation of yesterday's commission starts every morning at 01:00.
+                        <p data-v-caf13393="" data-lang="promotionRuleDesc5">The calculation of yesterday's commission starts every morning at 01:00.
                             After the commission calculation is completed, the commission is rewarded to the wallet and
                             can be viewed through the commission collection record.</p>
                     </div>
@@ -249,13 +249,13 @@
                     <div data-v-caf13393="" class="promotion-title">05</div>
                     <div data-v-caf13393="" class="promotion-box__titleRight"></div>
                     <div data-v-caf13393="" class="promotion-txt">
-                        <p data-v-caf13393="">Commission rates vary depending on your agency level on that day<br>Number
+                        <p data-v-caf13393="" data-lang="promotionRuleDesc4">Commission rates vary depending on your agency level on that day<br>Number
                             of Teams: How many downline deposits you have to date. <br>Team Deposits: The total number
                             of deposits made by your downline in one day. <br>Team Deposit: Your downline deposits
                             within one day.</p>
                     </div>
                 </div>
-                <div data-v-7c8bbbf4="" class="tit c-row c-row-between">Referral Condition For Level Commission</div>
+                <div data-v-7c8bbbf4="" class="tit c-row c-row-between" data-lang="promotionRuleRedTXT">Referral Condition For Level Commission</div>
                 <div data-v-7c8bbbf4="" class="table">
                     <div data-v-7c8bbbf4="" class="hd van-row">
                         <div data-v-7c8bbbf4="" class="c-tc van-ellipsis van-col van-col--6">Total Levels</div>
@@ -362,9 +362,9 @@
                     <div class="promotion-box__titleLeft" data-v-caf13393=""></div>
                     <div class="promotion-title" data-v-caf13393="">06</div>
                     <div class="promotion-box__titleRight" data-v-caf13393=""></div>
-                    <div data-v-caf13393="" class="promotion-txt">The commission percentage depends on the membership
+                    <div data-v-caf13393="" class="promotion-txt" ><span data-lang="promotionRuleDesc5">The commission percentage depends on the membership
                         level. The higher the membership level, the higher the bonus percentage. Different game types
-                        also have different payout percentages. <p data-v-caf13393="">The commission rate is
+                        also have different payout percentages.</span> <p data-v-caf13393="" data-lang="promotionRuleRedTXT">The commission rate is
                             specifically explained as follows</p>
                         <div data-v-caf13393="" class="txt" onclick="location.href='/promotion/rebate_ratio'">View rebate ratio &gt;&gt;</div>
                     </div>
@@ -375,7 +375,7 @@
                     <div data-v-caf13393="" class="promotion-box__titleLeft"></div>
                     <div data-v-caf13393="" class="promotion-title">07</div>
                     <div data-v-caf13393="" class="promotion-box__titleRight"></div>
-                    <div data-v-caf13393="" class="promotion-txt">TOP20 commission rankings will be randomly awarded
+                    <div data-v-caf13393="" class="promotion-txt" data-lang="tipTop20RankingAdditionalRewords">TOP20 commission rankings will be randomly awarded
                         with a separate bonus</div>
                 </div>
                 <div data-v-caf13393="" class="promotion-box">
@@ -384,7 +384,7 @@
                     <div data-v-caf13393="" class="promotion-box__titleLeft"></div>
                     <div data-v-caf13393="" class="promotion-title">08</div>
                     <div data-v-caf13393="" class="promotion-box__titleRight"></div>
-                    <div data-v-caf13393="" class="promotion-txt">The final interpretation of this activity belongs to
+                    <div data-v-caf13393="" class="promotion-txt" data-lang="tipInterpretationRightSaved">The final interpretation of this activity belongs to
                         CloudyScape</div>
                 </div>
                 <!--      <div data-v-7c8bbbf4="" class="tit c-row c-row-between m-t-15">Commission Calculation Method</div>
@@ -459,6 +459,28 @@
                     $('.btn-box .btn:eq(1)').attr('data-clipboard-text', window.location.hostname + `/register?r_code=${response.info[0].code}`);
                 }
             });
+
+            $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
+
         </script>
 </body>
 
