--- a/src/views/member/index.ejs
+++ b/src/views/member/index.ejs
@@ -393,7 +393,7 @@
                         <div data-v-8cd483ca="" class="c-row c-row-middle"
                          style="border-bottom: 0.0rem solid #1989fa">
                             <div data-v-8cd483ca="" class="p-l-15">
-                                <div data-v-67caa467="" class="des u-m-b-15">Total Balance</div>
+                                <div data-v-67caa467="" class="des u-m-b-15" data-lang="totalAmount">Total Balance</div>
                                 <div data-v-8cd483ca="" class="c-row c-row-middle c-row-center p-t-5">
                                     <div data-v-8cd483ca="" class="money">
                                         <div data-v-8cd483ca="">
@@ -426,24 +426,24 @@
                                 onclick="toggleBalanceVisibility()"></span>
                         </div>
                         <div data-v-8cd483ca="" class="c-row c-row-between m-t-10 infoBtn">
-                            <div data-v-8cd483ca="" class="item c-row c-row-center" onclick="location.href='/wallet'">
+                            <div data-v-8cd483ca="" class="item c-row c-row-center" onclick="location.href='/wallet/recharge'">
                                 <div data-v-8cd483ca="" class="totalSavings">
-                                    <img data-v-d61ad6c9="" src="/images/walletIMG.png" class="totalSavingsIMG"><span
-                                        data-v-d61ad6c9="">ARWallet</span>
+                                    <img data-v-d61ad6c9="" src="/images/recharge_TRANSFER4-.png" class="totalSavingsIMG"><span
+                                        data-v-d61ad6c9="">PIWallet</span>
                                 </div>
                             </div>
                             <div data-v-8cd483ca="" class="item c-row c-row-center"
                                 onclick="location.href='/wallet/recharge'">
                                 <div data-v-d61ad6c9="" class="totalSavings">
                                     <img data-v-d61ad6c9="" src="/images/recharge.png" class="totalSavingsIMG"><span
-                                        data-v-d61ad6c9="">Deposit</span>
+                                        data-v-d61ad6c9="" data-lang="depositMoney">Deposit</span>
                                 </div>
                             </div>
                             <div data-v-8cd483ca="" class="item c-row c-row-center"
                                 onclick="location.href='/wallet/withdrawal'">
                                 <div data-v-d61ad6c9="" class="totalSavings">
                                     <img data-v-d61ad6c9="" src="/images/withdraw.png" class="totalSavingsIMG"><span
-                                        data-v-d61ad6c9="">Withdraw</span>
+                                        data-v-d61ad6c9="" data-lang="withdraw">Withdraw</span>
                                 </div>
                             </div>
                             <div data-v-8cd483ca="" class="item c-row c-row-center"
@@ -768,7 +768,7 @@
                                         <div data-v-21f3500a="" class="c-row c-row-middle">
                                             <i class="fa-duotone fa-key fa-fade fa-lg center"
                                                 style="--fa-primary-color: #2aaaf3; --fa-secondary-color: #2aaaf3;"></i>
-                                            <span data-v-21f3500a="" class="name">Security & Safety</span>
+                                            <span data-v-21f3500a="" class="name" data-lang="pixSafety">Security & Safety</span>
                                         </div>
                                         <div data-v-21f3500a="" class="c-row c-row-middle"><i data-v-21f3500a=""
                                                 class="fa-regular fa-angle-right fa-fade fa-lg center"
@@ -781,7 +781,7 @@
                                         <div data-v-21f3500a="" class="c-row c-row-middle">
                                             <i class="fa-duotone fa-circle-question fa-fade fa-lg center"
                                                 style="--fa-primary-color: #2aaaf3; --fa-secondary-color: #2aaaf3;"></i>
-                                            <span data-v-21f3500a="" class="name">Guide for beginners</span>
+                                            <span data-v-21f3500a="" class="name" data-lang="guideTitle">Guide for beginners</span>
                                         </div>
                                         <div data-v-21f3500a="" class="c-row c-row-middle"><i data-v-21f3500a=""
                                                 class="fa-regular fa-angle-right fa-fade fa-lg center"
