--- a/src/views/promotion/myTeam.ejs
+++ b/src/views/promotion/myTeam.ejs
@@ -180,7 +180,7 @@
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion'" data-lang="announcement">Data</li>
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion/myTeam'" class="action block-click" data-lang="teamSheets">My
                             Team</li>
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'" data-lang="record">History</li>
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'" data-lang="allRecords">History</li>
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion/tutorial'" data-lang="titleInvitationRule">Tutorial</li>
                     </ul>
                 </div>
