--- a/src/views/promotion/promotion.ejs
+++ b/src/views/promotion/promotion.ejs
@@ -490,7 +490,7 @@
                             <ul data-v-7c8bbbf4="" class="c-row c-row-between">
                                 <li data-v-7c8bbbf4="" onclick="location.href='/promotion'" class="action block-click" data-lang="announcement">Data</li>
                                 <li data-v-7c8bbbf4="" onclick="location.href='/promotion/myTeam'" data-lang="teamSheets">My Team</li>
-                                <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'" data-lang="record">History</li>
+                                <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'" data-lang="allRecords">History</li>
                                 <li data-v-7c8bbbf4="" onclick="location.href='/promotion/tutorial'" data-lang="titleInvitationRule">Tutorial</li>
                             </ul>
                         </div>
