--- a/src/views/promotion/promotionDes.ejs
+++ b/src/views/promotion/promotionDes.ejs
@@ -54,7 +54,7 @@
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion'" data-lang="announcement">Data</li>
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion/myTeam'" data-lang="teamSheets">My Team</li>
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'"
-                            class="action block-click" data-lang="record">History</li>
+                            class="action block-click" data-lang="allRecords">History</li>
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion/tutorial'" data-lang="titleInvitationRule">Tutorial</li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
                         <div data-v-14912091="" class="hd van-row" style="overflow: hidden;">
                             <div data-v-14912091="" class="c-tc van-ellipsis van-col van-col--6" data-lang="time">Time</div>
                             <div data-v-14912091="" class="c-tc van-ellipsis van-col van-col--6" data-lang="tel">Phone</div>
-                            <div data-v-14912091="" class="c-tc van-ellipsis van-col van-col--6" data-lang="amount">Amount</div>
+                            <div data-v-14912091="" class="c-tc van-ellipsis van-col van-col--6" data-lang="commission">Amount</div>
                             <div data-v-14912091="" class="c-tc van-ellipsis van-col van-col--6" data-lang="invitationCode">Invite Code</div>
                         </div>
                         <div data-v-14912091="" class="list">
