--- a/src/views/promotion/tutorial.ejs
+++ b/src/views/promotion/tutorial.ejs
@@ -184,7 +184,7 @@
                     <ul data-v-7c8bbbf4="" class="c-row c-row-between">
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion'" data-lang="announcement">Data</li>
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion/myTeam'" data-lang="teamSheets">My Team</li>
-                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'" data-lang="record">History</li>
+                        <li data-v-7c8bbbf4="" onclick="location.href='/promotion/promotionDes'" data-lang="allRecords">History</li>
                         <li data-v-7c8bbbf4="" onclick="location.href='/promotion/tutorial'" class="action block-click" data-lang="titleInvitationRule">
                             Tutorial</li>
                     </ul>
@@ -257,7 +257,7 @@
                 </div>
                 <div data-v-7c8bbbf4="" class="tit c-row c-row-between" data-lang="promotionRuleRedTXT">Referral Condition For Level Commission</div>
                 <div data-v-7c8bbbf4="" class="table">
-                    <div data-v-7c8bbbf4="" class="hd van-row">
+                    <div data-v-7c8bbbf4="" class="hd van-row" style="color: rgb(236, 20, 31);">
                         <div data-v-7c8bbbf4="" class="c-tc van-ellipsis van-col van-col--6">Total Levels</div>
                         <div data-v-7c8bbbf4="" class="c-tc van-ellipsis van-col van-col--6">Referrals</div>
                         <div data-v-7c8bbbf4="" class="c-tc van-ellipsis van-col van-col--6">Commission</div>
@@ -366,7 +366,7 @@
                         level. The higher the membership level, the higher the bonus percentage. Different game types
                         also have different payout percentages.</span> <p data-v-caf13393="" data-lang="promotionRuleRedTXT">The commission rate is
                             specifically explained as follows</p>
-                        <div data-v-caf13393="" class="txt" onclick="location.href='/promotion/rebate_ratio'">View rebate ratio &gt;&gt;</div>
+                        <div data-v-caf13393="" class="txt" onclick="location.href='/promotion/rebate_ratio'" style="color: rgb(7, 248, 7);">View rebate ratio &gt;&gt;</div>
                     </div>
                 </div>
                 <div data-v-caf13393="" class="promotion-box">
