--- a/src/views/member/game_statistics.ejs
+++ b/src/views/member/game_statistics.ejs
@@ -402,7 +402,7 @@
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title">Receive history</div>
+                <div data-v-106b99c8="" class="navbar-title">Game Statics</div>
                 <div data-v-106b99c8="" class="navbar-right"></div>
             </div>
             <div data-v-40b81b7f="">
