--- a/src/views/wallet/index.ejs
+++ b/src/views/wallet/index.ejs
@@ -222,7 +222,7 @@ span {
                         <div data-v-7b283485="" class="balance m-t-10">
                             <div data-v-7b283485="" class="txt c-row c-row-middle">
                                 <img data-v-7b283485="" width="22px" height="18px" src="/images/king (2).png"
-                                    class="m-r-5 img"> My balance：
+                                    class="m-r-5 img"><span data-lang="amount"> My balance：</span>
                             </div>
                             <div data-v-7b283485="" class="c-row balanceMoney c-row-middle-center">
                                 <div data-v-7b283485="" class="money">
@@ -239,12 +239,12 @@ span {
                             </div>
                             <div data-v-7b283485="" class="info c-row">
                                 <div data-v-7b283485="" class="item">
-                                    <div data-v-7b283485="">Total Recharge</div>
+                                    <div data-v-7b283485="" data-lang="depositMoney">Total Recharge</div>
                                     <!---->
                                     <div data-v-7b283485="">₹ 0.00</div>
                                 </div>
                                 <div data-v-7b283485="" class="item">
-                                    <div data-v-7b283485="">Total Withdrawal</div>
+                                    <div data-v-7b283485="" data-lang="withdrawalA">Total Withdrawal</div>
                                     <!---->
                                     <div data-v-7b283485="">₹ 0.00</div>
                                 </div>
@@ -278,7 +278,7 @@ span {
                               <h3 data-v-be467d1a="" class="money">
                                 ₹0.00
                               </h3>
-                              <span data-v-be467d1a="">
+                              <span data-v-be467d1a="" data-lang="mainWallet">
                                 Main wallet
                               </span>
                             </div>
@@ -307,7 +307,7 @@ span {
                               <h3 data-v-be467d1a="">
                                 ₹0.00
                               </h3>
-                              <span data-v-be467d1a="">
+                              <span data-v-be467d1a="" data-lang="thirdPartyWallet">
                                 3rd party wallet
                               </span>
                             </div>
@@ -320,25 +320,25 @@ span {
                         <div data-v-7b283485="" class="c-row c-row-between total-btn m-t-10">
                             <div data-v-7b283485="" class="item c-row c-row-center"
                                 onclick="location.href='/wallet/transfer'">
-                                <div data-v-7b283485="" class="li"> MAIN WALLET TRANSFER </div>
+                                <div data-v-7b283485="" class="li" data-lang="oneClickRecovery"> MAIN WALLET TRANSFER </div>
                             </div>
                         </div>
                         <div data-v-7b283485="" class="c-row c-row-between total-btn m-t-30" id="image_box">
                             <div class="images_21" onclick="location.href='/wallet/recharge'">
                                 <img src="/images/recharge.png">
-                                <p>Deposit</p>
+                                <p data-lang="recharge">Deposit</p>
                             </div>
                             <div class="images_21" onclick="location.href='/wallet/withdrawal'">
                                 <img src="/images/withdraw.png">
-                                <p>Withdraw</p>
+                                <p data-lang="withdraw">Withdraw</p>
                             </div>
                             <div class="images_21" onclick="location.href='/wallet/rechargerecord'">
                                 <img src="/images/rechargeHistory.png">
-                                <p>Deposit History</p>
+                                <p data-lang="rechargeRecords">Deposit History</p>
                             </div>
                             <div class="images_21" onclick="location.href='/wallet/withdrawalrecord'">
                                 <img src="/images/withdrawHistory.png">
-                                <p>Withdraw History</p>
+                                <p data-lang="myWithdrawHistory">Withdraw History</p>
                             </div>
 
                         </div>
@@ -519,6 +519,28 @@ span {
                 $('.balance .item:eq(1) div:eq(1)').text("₹" + response.totalWithdraw + ".00");
             }
         });
+
+        $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
+
     </script>
 </body>
 
