--- a/src/views/wallet/transfer.ejs
+++ b/src/views/wallet/transfer.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="noindex,nofollow">
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
-    <title>Tiranga</title>
+    <title>Cloudyscape</title>
     <link rel="stylesheet" href="./index_files/index-96409872.css">
     <link rel="stylesheet" href="../index_files/index-96409872.css">
     <link href="/css/wallet/main.css" rel="stylesheet" />
@@ -91,7 +91,7 @@
                         <div data-v-7b283485="" class="balance m-t-10">
                             <div data-v-7b283485="" class="txt c-row c-row-middle">
                                 <img data-v-7b283485="" width="22px" height="18px" src="/images/king (2).png"
-                                    class="m-r-5 img"> My balance：
+                                    class="m-r-5 img"><span data-lang="amount"> My balance：</span>
                             </div>
                             <div data-v-7b283485="" class="c-row balanceMoney c-row-middle-center">
                                 <div data-v-7b283485="" class="money">
@@ -108,12 +108,12 @@
                             </div>
                             <div data-v-7b283485="" class="info c-row">
                                 <div data-v-7b283485="" class="item">
-                                    <div data-v-7b283485="">Total Recharge</div>
+                                    <div data-v-7b283485="" data-lang="depositMoney">Total Recharge</div>
                                     <!---->
                                     <div data-v-7b283485="">₹ 0.00</div>
                                 </div>
                                 <div data-v-7b283485="" class="item">
-                                    <div data-v-7b283485="">Total Withdrawal</div>
+                                    <div data-v-7b283485="" data-lang="withdrawalA">Total Withdrawal</div>
                                     <!---->
                                     <div data-v-7b283485="">₹ 0.00</div>
                                 </div>
@@ -150,7 +150,7 @@
                                     class="gradient van-button van-button--default van-button--normal van-button--block van-button--round">
                                     <div data-v-a0753f48="" class="van-button__content">
                                         <span data-v-a0753f48="" class="van-button__text">
-                                            <span data-v-a0753f48="">Send Money</span>
+                                            <span data-v-a0753f48="" data-lang="send">Send Money</span>
                                         </span>
                                     </div>
                                 </button>
@@ -165,7 +165,7 @@
                 </div>
                 <div data-v-7c8bbbf4="" class="promotion">
                     <div data-v-7c8bbbf4="" class="box">
-                        <div data-v-7c8bbbf4="" class="tit c-row c-row-between">Transferred Balance</div>
+                        <div data-v-7c8bbbf4="" class="tit c-row c-row-between" data-lang="amountTransferedOut">Transferred Balance</div>
                         <div data-v-7c8bbbf4="" class="table">
                             <div data-v-7c8bbbf4="" class="hd van-row">
                                 <div data-v-7c8bbbf4="" class="c-tc van-ellipsis van-col van-col--8">Phone number</div>
@@ -179,7 +179,7 @@
                     </div>
                     <div data-v-7c8bbbf4="" class="promotion">
                         <div data-v-7c8bbbf4="" class="box">
-                            <div data-v-7c8bbbf4="" class="tit c-row c-row-between">Received Balance</div>
+                            <div data-v-7c8bbbf4="" class="tit c-row c-row-between" data-lang="commission">Received Balance</div>
                             <div data-v-7c8bbbf4="" class="table">
                                 <div data-v-7c8bbbf4="" class="hd van-row">
                                     <div data-v-7c8bbbf4="" class="c-tc van-ellipsis van-col van-col--8">Phone number
@@ -344,6 +344,27 @@
 
                     }
                 });
+
+                $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
 
 
 
