--- a/src/views/member/redenvelopes.ejs
+++ b/src/views/member/redenvelopes.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="robots" content="noindex,nofollow" />
   <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport" />
-  <title>Tiranga</title>
+  <title>Cloudscape</title>
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.1/css/all.css">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-thin.css">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-solid.css">
@@ -87,7 +87,7 @@
                 <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
               </div>
               <div data-v-58c5e826="" class="navbar__content-center">
-                <div data-v-58c5e826="" class="navbar__content-title">Gift</div>
+                <div data-v-58c5e826="" class="navbar__content-title" data-lang="gift">Gift</div>
               </div>
               <div data-v-58c5e826="" class="navbar__content-right"></div>
             </div>
@@ -96,17 +96,17 @@
         <div data-v-3b4d4aab="" class="redeem-container-header-belly">
           <img data-v-3b4d4aab="" alt="" class=""
             data-origin=""
-            src="">
+            src="/images/Redenvelope.webp">
         </div>
       </div>
       <div data-v-3b4d4aab="" class="redeem-container-content">
         <div data-v-3b4d4aab="" class="redeem-container-receive">
-          <p data-v-3b4d4aab="">Hi</p>
-          <p data-v-3b4d4aab="">We have a gift for you</p>
-          <h4 data-v-3b4d4aab="">Please enter the gift code below</h4>
+          <p data-v-3b4d4aab="" data-lang="tipHelloVIP">Hey Dear </p>
+          <p data-v-3b4d4aab="" data-lang="tipWepreparedGift4u">We have a gift for you</p>
+          <h4 data-v-3b4d4aab="" data-lang="tipPlsEnterRedeemCode">Please enter the gift code below</h4>
           <input data-v-3b4d4aab="" type="text" auto-complete="new-password" autocomplete="off"
             placeholder="Please enter gift code">
-          <button data-v-3b4d4aab="">Receive</button>
+          <button data-v-3b4d4aab="" data-lang="receive">Receive</button>
         </div>
       </div>
     </div>
@@ -193,6 +193,28 @@
         alertMess('Please enter the gift code', iej);
       }
     });
+
+    $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
+
   </script>
 </body>
 
