--- a/src/views/promotion/promotion.ejs
+++ b/src/views/promotion/promotion.ejs
@@ -553,13 +553,13 @@
                                           <div data-v-167a3387="" class="ts_dep_num" id="teamSubordinatesRechargeQuantity">
                                             0
                                           </div>
-                                          <span data-lang="rechargeNumber">Deposit number</span>
+                                          <span data-lang="teamRecharge">Deposit number</span>
                                         </div>
                                         <div data-v-167a3387="" class="line3">
                                           <div data-v-167a3387="" class="ts_d_amount" id="teamSubordinatesRechargeAmount">
                                             0
                                           </div>
-                                          <span data-lang="rechargeNumber">Deposit number</span>
+                                          <span data-lang="teamRecharge">Deposit number</span>
                                         </div>
                                         <div data-v-167a3387="" class="line1">
                                           <div data-v-167a3387="" class="ts_p_f_deposit"  id="teamSubordinatesWithDepositCount">
