--- a/src/views/wallet/recharge.ejs
+++ b/src/views/wallet/recharge.ejs
@@ -151,7 +151,7 @@
                         </div>
 
                        <div data-v-67caa467="" class="item" type="wow_pay">
-                            <img data-v-67caa467="" width="20px" height="20px" src="/images/recharge_TRANSFER4-.png"
+                            <img data-v-67caa467="" width="20px" height="20px" src="/images/color_icon.png"
                                 class="img">
                             <div data-v-67caa467="" class="name">PI Pay</div>
 
@@ -249,10 +249,10 @@
                                 <div data-v-67caa467="" class="des">
                                     * The Bank payment gateway offers an additional 5% bonus on Every deposit.
                                 </div>
-                                <div data-v-67caa467="" class="des">
+                                <div data-v-67caa467="" class="des" data-lang="instructionDesc5">
                                     If you transfer the wrong amount as instructed, the funds will be lost, and our
                                     company will not be held responsible! </div>
-                                <div data-v-67caa467="" class="des">
+                                <div data-v-67caa467="" class="des" data-lang="c2cMBAIntegeriOS">
                                     * Note: You must deposit the exact amount as instructed in the order. The system
                                     will automatically update the bonus funds.
                                 </div>
@@ -269,7 +269,7 @@
                                         id="deposit_fund_btn">
 
                                         <div data-v-67caa467="" class="van-button__content">
-                                            <span data-v-67caa467="" class="van-button__text">Deposit Fund</span>
+                                            <span data-v-67caa467="" class="van-button__text" data-lang="rechargeNow">Deposit Fund</span>
                                         </div>
                                     </button>
 
@@ -282,7 +282,7 @@
 <div data-v-832238e6="" data-v-e0f4cdd7="" class="Recharge__container-intro">
   <div data-v-832238e6="" class="Recharge__container-intro__title">
     <img data-v-832238e6="" src="/assets/png/bookicon-12cde4d4.png" alt="">
-    <p data-v-832238e6="">
+    <p data-v-832238e6="" data-lang="rechargeInstruction">
       Recharge instructions
     </p>
   </div>
@@ -291,19 +291,19 @@
     <!---->
     <!---->
     <div data-v-832238e6="" class="item">
-      <p data-v-832238e6="">
+      <p data-v-832238e6="" data-lang="instructionTxt2">
         If the transfer time is up, please fill out the deposit form again.
       </p>
-      <p data-v-832238e6="">
+      <p data-v-832238e6="" data-lang="instructionTxt3">
         The transfer amount must match the order you created, otherwise the money
         cannot be credited successfully.
       </p>
-      <p data-v-832238e6="">
+      <p data-v-832238e6="" data-lang="instructionTxt4">
         If you transfer the wrong amount, our company will not be responsible
         for the lost amount!
       </p>
       <!---->
-      <p data-v-832238e6="">
+      <p data-v-832238e6="" data-lang="instructionTxt5">
         Note: do not cancel the deposit order after the money has been transferred.
       </p>
     </div>
