--- a/src/views/wallet/withdrawal.ejs
+++ b/src/views/wallet/withdrawal.ejs
@@ -550,7 +550,7 @@
                         <i class="fa-light fa-angle-left fa-fade fa-xl center" style="color: #FFF"></i>
                     </div>
                 </div>
-                <div data-v-106b99c8="" class="navbar-title"> Withdraw Money</div>
+                <div data-v-106b99c8="" class="navbar-title" data-lang="withdrawing"> Withdraw Money</div>
                 <div data-v-106b99c8="" class="navbar-right">
                     <div data-v-11ffe290="" data-v-106b99c8="" class="c-row">
                         <i class="fa-fade fa center" style="color: #FFF">
@@ -566,7 +566,7 @@
                 <div data-v-25d9c352="" class="txtBox">
                  
                     <div data-v-25d9c352="" class="c-row">
-                        <div data-v-25d9c352="" class="txt"><img data-v-618c2f5a="" src="/assets/png/balance-d5880fa1.png" width="20px"> Available Balance </div>
+                        <div data-v-25d9c352="" class="txt"><img data-v-618c2f5a="" src="/assets/png/balance-d5880fa1.png" width="20px"> <span data-lang="amountAvaliable">Available Balance</span> </div>
                     </div>  
                     <div data-v-25d9c352="" class="c-row">
                         
@@ -637,7 +637,7 @@
                 </div>
                 <!---->
                 <div data-v-25d9c352="" class="conBox m-t-5">
-                    <div data-v-25d9c352="" class="des">Payment Method</div>
+                    <div data-v-25d9c352="" class="des" data-lang="paymentMethod">Payment Method</div>
                     <div data-v-25d9c352="" class="box m-b-10">
                         <div data-v-25d9c352="">
                             <div data-v-25d9c352="" class="list">
@@ -650,7 +650,7 @@
                                     onclick="location.href='/wallet/addBank'"><span data-v-25d9c352=""
                                         class="plus c-row c-row-middle-center">
                                         <i class="fa-regular fa-plus fa-fade" style="color: #ffffff"></i>
-                                    </span> Add Bank Card</div>
+                                    </span > <span data-lang="tipPlsBindBankcard">Add Bank Card</span></div>
                             </div>
                             
                         </div>
@@ -667,13 +667,13 @@
                         data-v-25d9c352=""
                         class="btn van-button van-button--default van-button--normal van-button--block van-button--round">
                         <div data-v-25d9c352="" class="van-button__content"><span data-v-25d9c352=""
-                                class="van-button__text"> Withdraw Money </span></div>
+                                class="van-button__text" data-lang="withdrawing"> Withdraw Money </span></div>
                     </button></div>
                     
                     <div data-v-22e379ca="" class="arCard">
                         <div data-v-22e379ca="" class="left">
                           <img data-v-22e379ca="" src="/assets/png/21-b48d886d.png">
-                          Your AR wallet has not been activated yet
+                          Your PI wallet has not been activated yet
                         </div>
                         <div data-v-22e379ca="" class="right">
                           Activate
@@ -688,7 +688,7 @@
                         <div data-v-25d9c352="" class="item c-row c-row-middle">
                             <div data-v-25d9c352="" class="m-r-10 van-image" style="width: 30px; height: 30px;"><img
                                     src="/images/king (4).png" class="van-image__img"></div>
-                            <div data-v-25d9c352="">1. Withdrawal Fees: 0%</div>
+                            <div data-v-25d9c352="" data-lang="sxf1">1. Withdrawal Fees: 0%</div>
                         </div>
                         <!---->
                         <div data-v-25d9c352="" class="item c-row c-row-middle">
@@ -718,18 +718,18 @@
 
             <div data-v-22e379ca="" class="features">
                 <div data-v-22e379ca="" class="title">
-                  <img data-v-22e379ca="" src="/assets/png/ar2-3ab4e2ea.png">
-                  AR Wallet
+                  <img data-v-22e379ca="" src="/assets/png/color_icon.png">
+                  PI Wallet
                 </div>
                 <p data-v-22e379ca="">
-                  AR Wallet is a third-party payment service platform that facilitates fast
-                  payments on the platform using ARB (digital currency)
+                  PI Wallet is a third-party payment service platform that facilitates fast
+                  payments on the platform using PI (digital currency)
                 </p>
                 <p data-v-22e379ca="" class="t1">
                   Safe, stable and fast
                 </p>
                 <p data-v-22e379ca="" class="t2">
-                  How to activate AR wallet
+                  How to activate PI wallet
                   <i data-v-22e379ca="" class="van-badge__wrapper van-icon van-icon-arrow">
                     <!---->
                     <!---->
@@ -737,26 +737,26 @@
                   </i>
                 </p>
                 <p data-v-22e379ca="" class="t3">
-                  AR wallet features
+                  PI wallet features
                 </p>
                 <p data-v-22e379ca="">
                   You only need
                   <span>
-                    Tiranga
+                    Cloudscape
                   </span>
-                  to withdraw the balance to AR Wallet
+                  to withdraw the balance to PI Wallet
                 </p>
                 <p data-v-22e379ca="">
                   When you want to play games, you can quickly recharge to the
                   <span>
-                    Tiranga
+                    Cloudscape
                   </span>
-                  platform through AR Pay, with the recharge process taking only 5 seconds
+                  platform through PI Pay, with the recharge process taking only 5 seconds
                   to complete
                 </p>
                 <p data-v-22e379ca="">
                   When you need to withdraw money to your bank card, you can quickly sell
-                  ARB through UPI in your AR wallet to get rupees, and you can also get additional
+                  PI through UPI in your PI wallet to get rupees, and you can also get additional
                   rewards!
                 </p>
                 <p data-v-22e379ca="">
@@ -764,8 +764,8 @@
                   so you don't need to worry about bank limits. You just need to sell to
                   UPI when you need to use the funds.
                 </p>
-                <div data-v-22e379ca="" class="toActive">
-                  activate AR wallet
+                <div data-v-22e379ca="" class="toActive" href="https://minepi.com">
+                  activate PI wallet
                 </div>
               </div>
 
@@ -861,6 +861,28 @@
                 alertMess('Need Minimum Recharge To Withdrawal', $(this));
             }
         });
+
+        $.ajax({
+            type: "POST",
+            url: "/api/webapi/getlangdata",
+            data: {
+            },
+            dataType: "json",
+            success: function (response) {
+                load_lang_data(response.data);
+            }
+          });
+    
+          function load_lang_data(data)
+          {
+            setTimeout(() => {
+              $.each(data, function(key,valueObj){
+                console.log(key);
+                $("[data-lang="+key+"]").text(valueObj);
+              });
+           }, 1000); 
+          }
+
     </script>
 </body>
 
